# ai-eng-course

./: .gitignore  custom_types.py  main.py  pyproject.toml  utils.py
benchmark/: generate_ground_truth.py
task_1/: cv_parser.py  doc_parser.py  positions_parser.py
task_2/: script_1.ipynb  test.ipynb
